Fixed issues with dashboard spacing

--- a/src/components/CreateCard/AddCard.module.css
+++ b/src/components/CreateCard/AddCard.module.css
@@ -91,6 +91,6 @@
 
 .deckName {
   font-size: 30px;
-  margin-left: 240px;
+  margin-left: 90px;
   font-family: Arial, Helvetica, sans-serif;
 }
